# namedivider-rs

./: .gitignore  Cargo.toml  LICENSE  LOCAL_BUILD_GUIDE.md  PERFORMANCE_COMPARISON.md  README.md  next_action.md  next_action_add_platforms.md
.github/: test_script.py
.github/workflows/: README.md  build-all-wheels.yml  build-multiplatform-wheels.yml  debug-environment.yml  test-build.yml  test-macos-wheel.yml  test-thread-safety-v2.yml  test-thread-safety.yml  test-windows-wheel.yml  validate-config.yml
api/: Cargo.toml  Dockerfile  README.md  build.sh
api-sample/csharp/: Sample.cs
api-sample/kotlin/src/main/kotlin/: SdkLike.kt
api-sample/php/: SdkLike.php
api-sample/python/: README.md
api-sample/typescript/: package-lock.json
api/benchmarks/: .gitignore  README.md  benchmark.sh  load_test.py
api/benchmarks/test-data/: sample.txt
api/client-samples/: .gitignore  README.md
api/client-samples/csharp/: NameDividerSample.csproj  README.md  SdkLike.cs
api/client-samples/go/: README.md  go.mod  sample.go  sdk_like.go
api/client-samples/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
api/client-samples/kotlin/src/main/kotlin/: Sample.kt
api/client-samples/php/: README.md  composer.json  sample.php
api/client-samples/python/: sample.py  sdk_like.py
api/client-samples/ruby/: Gemfile  README.md  sample.rb  sdk_like.rb
api/client-samples/typescript/: README.md  package.json  sample.ts  sdk-like.ts
api/src/: main.rs
namedivider-rs/: .gitignore  Cargo.toml
namedivider-rs/src/: divider.rs  feature.rs  lib.rs  main.rs
namedivider-rs/src/assets/: family_names_sample.txt  gbdt_model_v1.txt  kanji.json
namedivider-rs/src/divider/: basic_name_divider.rs  basic_score_calculator.rs  divided_name.rs  gbdt_name_divider.rs  gbdt_score_calculator.rs  name_divider.rs  name_divider_base.rs  score_calculator.rs  two_char_name_divider.rs  two_char_score_calculator.rs
namedivider-rs/src/feature/: assets.rs  extractor.rs  family_name.rs  functional.rs  kanji.rs
namedivider-rs/tests/: basic_name_divider.rs  gbdt_name_divider.rs  thread_safety.rs
python/: Cargo.toml  build.rs  pyproject.toml
python/src/: lib.rs
python/tests/: test_cibw_thread_safety.py  test_thread_crash.py
scripts/: build_multiplatform_wheels.sh
