[package]
name = "api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
namedivider-rs = {path = "../namedivider-rs"}
serde = "1.0.164"

# Force older url version to avoid Rust 1.82 requirement from icu dependencies
url = "=2.4.1"
