[package]
name = "namedivider-rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
rust-embed = { version = "6.4.2", features = ["debug-embed"] }
clap = { version = "4.0.32", features = ["derive"] }
lightgbm = { workspace = true }